--- a/.vitepress/theme/global.css
+++ b/.vitepress/theme/global.css
@@ -71,11 +71,13 @@
 }
 
 body {
-  line-height: 28px;
+  line-height: 1.75rem;
+  font-size: 1rem;
 }
 
 ul {
-  line-height: 24px;
+  line-height: 1.5rem;
+  margin: 0.5rem 0 !important;
 }
 
 .my-main {
@@ -111,26 +113,32 @@ ul {
 
 
 em[fancy] {
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  -webkit-box-decoration-break: clone;
-  box-decoration-break: clone;
-  font-size: 1.1em;
+  font-size: 1.08em;
   font-style: normal;
   font-weight: bold;
 }
 
-em[fancy] {
-  olor: rgb(249, 57, 87);
-  background-image: linear-gradient(90deg, rgb(255, 113, 0) 0%, rgb(243, 0, 173) 100%);
-}
-
-.dark {
+@media screen {
   em[fancy] {
-    color: rgb(255, 119, 132);
-    background-image: linear-gradient(90deg, rgb(255, 102, 86) 0%, rgb(255, 135, 178) 100%);
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
+  }
+
+  em[fancy] {
+    color: rgb(249, 57, 87);
+    background-image: linear-gradient(90deg, rgb(255, 113, 0) 0%, rgb(243, 0, 173) 100%);
+  }
+
+  .dark {
+    em[fancy] {
+      color: rgb(255, 119, 132);
+      background-image: linear-gradient(90deg, rgb(255, 102, 86) 0%, rgb(255, 135, 178) 100%);
+    }
   }
 }
+
 
 figure {
   display: flex;
@@ -152,5 +160,39 @@ figure figcaption {
 .dark {
   figure figcaption {
     color: #a3a3a3;
+  }
+}
+
+@page {
+  margin-top: 10mm;
+  margin-bottom: 10mm;
+}
+
+@media print {
+  html {
+    font-size: 12px;
+  }
+
+  .vp-doc h2 {
+    margin: 12px 0 12px;
+    padding-top: 1.2rem;
+    font-size: 1.8rem;
+    line-height: 2rem;
+  }
+
+  header.VPNav,
+  .no-print,
+  .VPLocalNavOutlineDropdown {
+    display: none;
+  }
+
+  a {
+    color: var(--vp-c-text-1) !important;
+    font-weight: normal !important;
+  }
+
+  .avoid-page-break {
+    break-inside: avoid;
+    page-break-inside: avoid;
   }
 }
