--- a/.vitepress/theme/global.css
+++ b/.vitepress/theme/global.css
@@ -75,9 +75,39 @@ body {
   font-size: 1rem;
 }
 
-ul {
-  line-height: 1.5rem;
-  margin: 0.5rem 0 !important;
+/* UnoCSS is conflict with vitepress */
+.outline {
+  outline: none !important;
+}
+
+.vp-doc {
+  ul {
+    line-height: 1.7rem;
+    margin: 0.5rem 0 !important;
+  }
+
+  figure {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  figure + figure {
+    margin-top: 2rem;
+  }
+
+  figure figcaption {
+    text-align: center;
+    font-size: 0.875rem;
+    font-style: italic;
+    color: #737373;
+  }
+
+  .dark {
+    figure figcaption {
+      color: #a3a3a3;
+    }
+  }
 }
 
 .my-main {
@@ -140,28 +170,7 @@ em[fancy] {
 }
 
 
-figure {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
 
-figure + figure {
-  margin-top: 2rem;
-}
-
-figure figcaption {
-  text-align: center;
-  font-size: 0.875rem;
-  font-style: italic;
-  color: #737373;
-}
-
-.dark {
-  figure figcaption {
-    color: #a3a3a3;
-  }
-}
 
 @page {
   margin-top: 10mm;
@@ -174,15 +183,25 @@ figure figcaption {
   }
 
   .vp-doc h2 {
-    margin: 12px 0 12px;
+    margin: 18px 0;
     padding-top: 1.2rem;
     font-size: 1.8rem;
     line-height: 2rem;
   }
 
+  .vp-doc {
+    ul {
+      line-height: 1.5rem;
+    }
+  }
+
   header.VPNav,
   .no-print,
-  .VPLocalNavOutlineDropdown {
+  .last-updated,
+  .aside,
+  .VPLocalNavOutlineDropdown,
+  .VPLocalNav,
+  .vp-doc .header-anchor::before {
     display: none;
   }
 
